src/xml.output
Terminals unused in grammar

   ENCODING


Grammar

    0 $accept: document $end

    1 document: declarations element misc_seq_opt

    2 misc_seq_opt: misc_seq_opt misc
    3             | /* empty */

    4 misc: COMMENT

    5 declarations: declarations declaration
    6             | declarations doctype
    7             | /* empty */

    8 doctype: DOCTYPE NAME NAME VALUE CLOSE

    9 declaration: STARTSPECIAL attributs CLOSESPECIAL

   10 element: start attributs empty_or_content

   11 start: START
   12      | NSSTART

   13 empty_or_content: SLASH CLOSE
   14                 | close_content_and_end name_or_nsname_opt CLOSE

   15 attributs: attributs name_or_nsname_opt EQ VALUE
   16          | /* empty */

   17 name_or_nsname_opt: NAME
   18                   | NSNAME
   19                   | /* empty */

   20 close_content_and_end: CLOSE content END

   21 content: content DATA
   22        | content misc
   23        | content element
   24        | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
EQ (258) 15
SLASH (259) 13
CLOSE (260) 8 13 14 20
END (261) 20
CLOSESPECIAL (262) 9
DOCTYPE (263) 8
ENCODING (264)
VALUE (265) 8 15
DATA (266) 21
COMMENT (267) 4
NAME (268) 8 17
NSNAME (269) 18
NSSTART (270) 12
START (271) 11
STARTSPECIAL (272) 9


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
document (19)
    on left: 1, on right: 0
misc_seq_opt (20)
    on left: 2 3, on right: 1 2
misc (21)
    on left: 4, on right: 2 22
declarations (22)
    on left: 5 6 7, on right: 1 5 6
doctype (23)
    on left: 8, on right: 6
declaration (24)
    on left: 9, on right: 5
element (25)
    on left: 10, on right: 1 23
start (26)
    on left: 11 12, on right: 10
empty_or_content (27)
    on left: 13 14, on right: 10
attributs (28)
    on left: 15 16, on right: 9 10 15
name_or_nsname_opt (29)
    on left: 17 18 19, on right: 14 15
close_content_and_end (30)
    on left: 20, on right: 14
content (31)
    on left: 21 22 23 24, on right: 20 21 22 23


state 0

    0 $accept: . document $end

    $default  reduce using rule 7 (declarations)

    document      go to state 1
    declarations  go to state 2


state 1

    0 $accept: document . $end

    $end  shift, and go to state 3


state 2

    1 document: declarations . element misc_seq_opt
    5 declarations: declarations . declaration
    6             | declarations . doctype

    DOCTYPE       shift, and go to state 4
    NSSTART       shift, and go to state 5
    START         shift, and go to state 6
    STARTSPECIAL  shift, and go to state 7

    doctype      go to state 8
    declaration  go to state 9
    element      go to state 10
    start        go to state 11


state 3

    0 $accept: document $end .

    $default  accept


state 4

    8 doctype: DOCTYPE . NAME NAME VALUE CLOSE

    NAME  shift, and go to state 12


state 5

   12 start: NSSTART .

    $default  reduce using rule 12 (start)


state 6

   11 start: START .

    $default  reduce using rule 11 (start)


state 7

    9 declaration: STARTSPECIAL . attributs CLOSESPECIAL

    $default  reduce using rule 16 (attributs)

    attributs  go to state 13


state 8

    6 declarations: declarations doctype .

    $default  reduce using rule 6 (declarations)


state 9

    5 declarations: declarations declaration .

    $default  reduce using rule 5 (declarations)


state 10

    1 document: declarations element . misc_seq_opt

    $default  reduce using rule 3 (misc_seq_opt)

    misc_seq_opt  go to state 14


state 11

   10 element: start . attributs empty_or_content

    $default  reduce using rule 16 (attributs)

    attributs  go to state 15


state 12

    8 doctype: DOCTYPE NAME . NAME VALUE CLOSE

    NAME  shift, and go to state 16


state 13

    9 declaration: STARTSPECIAL attributs . CLOSESPECIAL
   15 attributs: attributs . name_or_nsname_opt EQ VALUE

    CLOSESPECIAL  shift, and go to state 17
    NAME          shift, and go to state 18
    NSNAME        shift, and go to state 19

    $default  reduce using rule 19 (name_or_nsname_opt)

    name_or_nsname_opt  go to state 20


state 14

    1 document: declarations element misc_seq_opt .
    2 misc_seq_opt: misc_seq_opt . misc

    COMMENT  shift, and go to state 21

    $default  reduce using rule 1 (document)

    misc  go to state 22


state 15

   10 element: start attributs . empty_or_content
   15 attributs: attributs . name_or_nsname_opt EQ VALUE

    SLASH   shift, and go to state 23
    CLOSE   shift, and go to state 24
    NAME    shift, and go to state 18
    NSNAME  shift, and go to state 19

    $default  reduce using rule 19 (name_or_nsname_opt)

    empty_or_content       go to state 25
    name_or_nsname_opt     go to state 20
    close_content_and_end  go to state 26


state 16

    8 doctype: DOCTYPE NAME NAME . VALUE CLOSE

    VALUE  shift, and go to state 27


state 17

    9 declaration: STARTSPECIAL attributs CLOSESPECIAL .

    $default  reduce using rule 9 (declaration)


state 18

   17 name_or_nsname_opt: NAME .

    $default  reduce using rule 17 (name_or_nsname_opt)


state 19

   18 name_or_nsname_opt: NSNAME .

    $default  reduce using rule 18 (name_or_nsname_opt)


state 20

   15 attributs: attributs name_or_nsname_opt . EQ VALUE

    EQ  shift, and go to state 28


state 21

    4 misc: COMMENT .

    $default  reduce using rule 4 (misc)


state 22

    2 misc_seq_opt: misc_seq_opt misc .

    $default  reduce using rule 2 (misc_seq_opt)


state 23

   13 empty_or_content: SLASH . CLOSE

    CLOSE  shift, and go to state 29


state 24

   20 close_content_and_end: CLOSE . content END

    $default  reduce using rule 24 (content)

    content  go to state 30


state 25

   10 element: start attributs empty_or_content .

    $default  reduce using rule 10 (element)


state 26

   14 empty_or_content: close_content_and_end . name_or_nsname_opt CLOSE

    NAME    shift, and go to state 18
    NSNAME  shift, and go to state 19

    $default  reduce using rule 19 (name_or_nsname_opt)

    name_or_nsname_opt  go to state 31


state 27

    8 doctype: DOCTYPE NAME NAME VALUE . CLOSE

    CLOSE  shift, and go to state 32


state 28

   15 attributs: attributs name_or_nsname_opt EQ . VALUE

    VALUE  shift, and go to state 33


state 29

   13 empty_or_content: SLASH CLOSE .

    $default  reduce using rule 13 (empty_or_content)


state 30

   20 close_content_and_end: CLOSE content . END
   21 content: content . DATA
   22        | content . misc
   23        | content . element

    END      shift, and go to state 34
    DATA     shift, and go to state 35
    COMMENT  shift, and go to state 21
    NSSTART  shift, and go to state 5
    START    shift, and go to state 6

    misc     go to state 36
    element  go to state 37
    start    go to state 11


state 31

   14 empty_or_content: close_content_and_end name_or_nsname_opt . CLOSE

    CLOSE  shift, and go to state 38


state 32

    8 doctype: DOCTYPE NAME NAME VALUE CLOSE .

    $default  reduce using rule 8 (doctype)


state 33

   15 attributs: attributs name_or_nsname_opt EQ VALUE .

    $default  reduce using rule 15 (attributs)


state 34

   20 close_content_and_end: CLOSE content END .

    $default  reduce using rule 20 (close_content_and_end)


state 35

   21 content: content DATA .

    $default  reduce using rule 21 (content)


state 36

   22 content: content misc .

    $default  reduce using rule 22 (content)


state 37

   23 content: content element .

    $default  reduce using rule 23 (content)


state 38

   14 empty_or_content: close_content_and_end name_or_nsname_opt CLOSE .

    $default  reduce using rule 14 (empty_or_content)
